--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
    "name": "Bizportal",
    "version": "0.1.0",
+   "description": "biz web client",
    "private": true,
    "scripts": {
       "serve": "vue-cli-service serve",
@@ -8,6 +9,11 @@
       "lint": "vue-cli-service lint"
    },
    "dependencies": {
+      "@fortawesome/fontawesome-svg-core": "^1.2.31",
+      "@fortawesome/free-brands-svg-icons": "^5.15.0",
+      "@fortawesome/free-regular-svg-icons": "^5.15.0",
+      "@fortawesome/free-solid-svg-icons": "^5.15.0",
+      "@fortawesome/vue-fontawesome": "^3.0.0-1",
       "core-js": "^3.6.5",
       "vue": "^3.0.0-0",
       "vue-router": "^4.0.0-0",
@@ -42,5 +48,18 @@
       "> 1%",
       "last 2 versions",
       "not dead"
-   ]
+   ],
+   "author": {
+      "name": "Sungjae Jin",
+      "email": "crispy4343@gmail.com",
+      "url": "https://github.com/crispy43"
+   },
+   "contributors": [
+      "Sungjae Jin <crispy4343@gmail.com> (https://github.com/crispy43)"
+   ],
+   "license": "UNLICENSED",
+   "bugs": {
+      "url": "https://github.com/crispy43/bizportal_web/issues",
+      "email": "crispy4343@gmail.com"
+   }
 }
