--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
       "@fortawesome/free-solid-svg-icons": "^5.15.0",
       "@fortawesome/vue-fontawesome": "^3.0.0-1",
       "core-js": "^3.6.5",
+      "date-fns": "^2.16.1",
+      "got": "^11.7.0",
       "vue": "^3.0.0-0",
       "vue-router": "^4.0.0-0",
       "vuex": "^4.0.0-0"
