--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
    "scripts": {
       "serve": "vue-cli-service serve",
       "build": "vue-cli-service build",
-      "lint": "vue-cli-service lint"
+      "lint": "vue-cli-service lint",
+      "jsdoc": "jsdoc -c ./jsdoc.conf",
+      "docs": "start chrome ./docs/index.html"
    },
    "dependencies": {
       "@fortawesome/fontawesome-svg-core": "^1.2.31",
@@ -29,8 +31,10 @@
       "@vue/cli-service": "~4.5.0",
       "@vue/compiler-sfc": "^3.0.0-0",
       "babel-eslint": "^10.1.0",
+      "docdash": "^1.2.0",
       "eslint": "^6.7.2",
-      "eslint-plugin-vue": "^7.0.0-0"
+      "eslint-plugin-vue": "^7.0.0-0",
+      "jsdoc": "^3.6.6"
    },
    "eslintConfig": {
       "root": true,
