LoaderA vue-spinner 적용

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
       "got": "^11.7.0",
       "vue": "^3.0.0-0",
       "vue-router": "^4.0.0-0",
+      "vue-spinner": "^1.0.4",
       "vuex": "^4.0.0-0"
    },
    "devDependencies": {
